# episteme

./: .gitignore  settings.gradle.kts
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/phases/01-audio-ebook-sync/: 01-audio-ebook-sync-01-PLAN.md  01-audio-ebook-sync-01-SUMMARY.md  01-audio-ebook-sync-02-PLAN.md  01-audio-ebook-sync-02-SUMMARY.md  01-audio-ebook-sync-03-PLAN.md  01-audio-ebook-sync-03-SUMMARY.md  01-audio-ebook-sync-04-PLAN.md  01-audio-ebook-sync-04-SUMMARY.md  01-audio-ebook-sync-05-PLAN.md  01-audio-ebook-sync-05-SUMMARY.md  01-audio-ebook-sync-06-PLAN.md  01-audio-ebook-sync-06-SUMMARY.md  01-audio-ebook-sync-07-PLAN.md  01-audio-ebook-sync-07-SUMMARY.md  01-audio-ebook-sync-08-PLAN.md  01-audio-ebook-sync-08-SUMMARY.md  01-audio-ebook-sync-09-PLAN.md  01-audio-ebook-sync-09-SUMMARY.md  01-audio-ebook-sync-10-PLAN.md  01-audio-ebook-sync-CONTEXT.md  01-audio-ebook-sync-DISCOVERY.md  01-audio-ebook-sync-WAVES-2-6-NOTES.md
.serena/: project.yml
app/: build.gradle.kts  proguard-rules.pro
app/libs/: custom-onnxruntime-arm64.aar
app/src/androidTest/assets/epub/: reader_test_book.epub
app/src/androidTest/fixtures/epub/: README.md  build_reader_test_book.py
app/src/androidTest/fixtures/epub/reader_test_book/OEBPS/: nav.xhtml  package.opf
app/src/androidTest/fixtures/epub/reader_test_book/OEBPS/chapters/: chapter-01.xhtml  chapter-02.xhtml  chapter-03.xhtml
app/src/androidTest/java/com/aryan/reader/: AppNavigationTest.kt  HomeRecentFileCardTest.kt  LibraryScreenContentTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: epub_reader.js  google_fonts.json
app/src/main/cpp/: CMakeLists.txt  pdfium_bridge.cpp  whisper_jni_bridge.cpp
app/src/main/java/com/aryan/reader/: AiSettingsScreen.kt  AndroidSettingsHubModels.kt  AndroidSharedStateBridge.kt  AppNavigation.kt  BookReplacementStore.kt  BookWordReplacementsSheet.kt  CloudEpubAnnotationMetadata.kt  CloudPdfAnnotationSidecarDecisions.kt  CloudSyncTrace.kt  CloudSyncWorker.kt  Common.kt  FileHasher.kt  FolderSyncWorker.kt  FontsScreen.kt  HomeScreen.kt  LibraryModels.kt  LibraryScreen.kt  MainActivity.kt  MainScreen.kt  MainViewModel.kt  MetadataExtractionWorker.kt  ReaderBrightness.kt  ReaderSliderChromeState.kt  SettingsScreen.kt  SharedComposables.kt  SharedModelMappers.kt  SyncNotificationHelper.kt  SyncedFolderPrefs.kt  TtsWordReplacementsSheet.kt  UiLabelResources.kt
app/src/main/res/drawable-nodpi/: bug_report.xml  comic_bubble.xml  devices.xml  do_not_touch.xml  folder_special.xml  format_align_right.xml  my_location.xml  navigate_before.xml  navigate_next.xml  phone_android.xml  policy.xml  psychology.xml  smartphone.xml
app/src/main/res/values/: font_certs.xml  plurals.xml  strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-be/: plurals.xml  strings.xml
app/src/main/res/values-de/: plurals.xml  strings.xml
app/src/main/res/values-es/: plurals.xml  strings.xml
app/src/main/res/values-fr/: plurals.xml  strings.xml
app/src/main/res/values-hi/: plurals.xml  strings.xml
app/src/main/res/values-in/: plurals.xml  strings.xml
app/src/main/res/values-it/: plurals.xml  strings.xml
app/src/main/res/values-ja/: plurals.xml  strings.xml
app/src/main/res/values-ko/: plurals.xml  strings.xml
app/src/main/res/values-nl/: plurals.xml  strings.xml
app/src/main/res/values-pl/: plurals.xml  strings.xml
app/src/main/res/values-pt-rBR/: plurals.xml  strings.xml
app/src/main/res/values-ru/: plurals.xml  strings.xml
app/src/main/res/values-tr/: plurals.xml  strings.xml
app/src/main/res/values-uk/: plurals.xml  strings.xml
app/src/main/res/values-vi/: plurals.xml  strings.xml
app/src/main/res/values-zh-rCN/: plurals.xml  strings.xml
app/src/main/res/xml/: locales_config.xml
app/src/oss/java/com/aryan/reader/: BillingClientWrapper.kt
app/src/test/java/com/aryan/reader/: AndroidLegalLinksTest.kt  AndroidSettingsHubModelsTest.kt  AndroidStringFormatResourcesTest.kt  AppLanguageOptionsTest.kt  BookReplacementHtmlTest.kt  CloudEpubAnnotationMetadataTest.kt  CloudPdfAnnotationSidecarDecisionsTest.kt  FileTypeResolverTest.kt  MainViewModelTest.kt  ReaderBrightnessSettingsTest.kt  ReaderSliderChromeStateTest.kt  SharedModelMappersTest.kt  SyncedFolderPrefsTest.kt
desktopApp/: build.gradle.kts  compose-desktop.pro
gradle/: libs.versions.toml
shared/: build.gradle.kts
(+360 files in other folders)
